package org.example.Practica.Enums;

public enum Posiciones {
    PORTERO,DEFENSA,CENTROCAMPISTA,DELANTERO;
}
