package org.example.Practica.Excepciones;

public class FormatoFormacionException extends RuntimeException {
    public FormatoFormacionException() {
        super();
    }
}
