package org.example.Practica.Interfaces;

public interface AccionesDeportivas {
    void entrenar();
    void jugarPartido(String rival);
}
