package org.example.Practica.Interfaces;

public interface FuncionesIntegrantes {
    void concentrarse();
    void viajar(String ciudad);
    void celebrarGol();
}
